changed tab style and fixed footer glitch

--- a/views/footer.haml
+++ b/views/footer.haml
@@ -1,4 +1,7 @@
 %footer(data-role="footer" data-position="fixed")
-  %nav(data-role="navbar")
-    %a(href="/" data-ajax="false") Posts
-    %a(href="#new" data-transition="flip") New Entry
+	%nav(data-role="navbar")
+		%ul
+			%li
+				%a(href="/" data-ajax="false" data-transition="slide" data-direction="reverse") Home
+			%li
+				%a(href="#work" data-transition="slide") Work
