city added and tab changed

--- a/views/footer.haml
+++ b/views/footer.haml
@@ -5,3 +5,5 @@
 				%a(href="/" data-ajax="false" data-transition="slide" data-direction="reverse") Home
 			%li
 				%a(href="#work" data-transition="slide") Work
+			%li
+				%a(href="#city" data-transition="slide") City
