--- a/views/index.haml
+++ b/views/index.haml
@@ -12,6 +12,14 @@
 	%section(data-role="content")
 		= haml :work
 	
+	= haml :footer
+	
+%div(data-role="page" id="city")
+	= haml :header
+	
+	%section(data-role="content")
+		= haml :city
+		
 	= haml :footer			
 
 %div(data-role="page" id="options")
