connect to Reittiopas and list routes
A couple of new things in this commit:

 - An AJAX call to the API for a sample route, run on document load.

 - A handlebars.js template that takes the JSON returned by reittiopas and lists it. It doesn't display anything meaningful yet, but it seems to work.

--- a/views/index.haml
+++ b/views/index.haml
@@ -1,7 +1,7 @@
 %div(data-role="page" id="home")
 	= haml :header
 	
-	%section(data-role="content")
+	%section#routesList(data-role="content")
 		= haml :home
 	
 	= haml :footer
