change from listview to collapsible set

--- a/views/templates.haml
+++ b/views/templates.haml
@@ -1,14 +1,14 @@
 -# The structure of a route listing can be seen in public/sampleroute.json
 %script{:id => "routes", :type => "text/x-handlebars-template"}
-  %ul{:data => {:role => "listview"}}
+  .routeList{:data => {:role => "collapsible-set", :theme => "c", :'content-theme' => 'd'}}
     -# Go through the array of routes and select the single item in each
     {{#each []}}
     {{#with [0]}}
-    %li
-      %p.ui-li-aside
+    .route{:data => {:role => "collapsible", :collapsed => "true"}}
+      %p
         {{length}}
       %h3
-        {{duration}}
+        {{durationHMS}}
       %ul
       -# List each part of the route
         {{#legs}}
