list the parts of each route
Now the parts of the route are actually picked up by Handlebars when traversing the JSON. Length and duration are listed but no actual styling or additional info is added.

Next step would be to format the routes in a meaningful way and to insert other data on each part such as line number and type.

--- a/views/index.haml
+++ b/views/index.haml
@@ -1,7 +1,7 @@
 %div(data-role="page" id="home")
 	= haml :header
 	
-	%section#routesList(data-role="content")
+	%section(data-role="content")
 		= haml :home
 	
 	= haml :footer
