fetch addresses when editing options
A call to the Reittiopas API is made when saving changes to the Home Address (nothing is actually saved as of yet). If there are multiple matches, they are listed in a SimpleDialog (http://dev.jtsage.com/) dialog.

Next step: do something with the address choice. Name and coordinates need to be saved to local storage and the function applied to all address fields.

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -5,8 +5,10 @@
 		%meta(content="IE=edge,chrome=1" http-equiv="X-UA-Compatible")
 		%meta(name="viewport" content="width=device-width, user-scalable=0, initial-scale=1.0, maximum-scale=1.0;")
 		%link(rel="stylesheet" href="jquery/jquery.mobile-1.0.1.min.css")
+		%link(rel="stylesheet" type="text/css" href="http://dev.jtsage.com/cdn/simpledialog/latest/jquery.mobile.simpledialog.min.css")
 		%script(type="text/javascript" src="jquery/jquery-1.7.1.min.js")
 		%script(type="text/javascript" src="jquery/jquery.mobile-1.0.1.min.js")
+		%script(type="text/javascript" src="http://dev.jtsage.com/cdn/simpledialog/latest/jquery.mobile.simpledialog2.min.js")
 		%script(type="text/javascript" src="js/handlebars-1.0.0.beta.6.js")
 		%title
 			ReittiSpeedDial
@@ -15,6 +17,3 @@
 	%body
 		= haml :templates
 		= yield
-
-				
-				
