added location detection

--- a/views/index.haml
+++ b/views/index.haml
@@ -2,7 +2,7 @@
 	= haml :header
 	
 	%section(data-role="content")
-		= haml :home
+		= haml :gpscanvas
 	
 	= haml :footer
 
@@ -10,7 +10,7 @@
 	= haml :header
 	
 	%section(data-role="content")
-		= haml :work
+		= haml :gpscanvas
 	
 	= haml :footer
 	
@@ -18,7 +18,7 @@
 	= haml :header
 	
 	%section(data-role="content")
-		= haml :city
+		= haml :gpscanvas
 		
 	= haml :footer			
 
