--- a/views/layout.haml
+++ b/views/layout.haml
@@ -6,6 +6,7 @@
 		%meta(name="viewport" content="width=device-width, user-scalable=0, initial-scale=1.0, maximum-scale=1.0;")
 		%link(rel="stylesheet" href="jquery/jquery.mobile-1.0.1.min.css")
 		%link(rel="stylesheet" type="text/css" href="http://dev.jtsage.com/cdn/simpledialog/latest/jquery.mobile.simpledialog.min.css")
+		%link(rel="stylesheet" href="css/styles.css")
 		%script(type="text/javascript" src="jquery/jquery-1.7.1.min.js")
 		%script(type="text/javascript" src="jquery/jquery.mobile-1.0.1.min.js")
 		%script(type="text/javascript" src="http://dev.jtsage.com/cdn/simpledialog/latest/jquery.mobile.simpledialog2.min.js")
