--- a/views/templates.haml
+++ b/views/templates.haml
@@ -25,6 +25,7 @@
       {{#legs}}
       .leg
         %h6
+          %figure{:class => 'icon {{iconClass}}'}
           {{length}}
         %p
           {{duration}}
