format total walking distance
Changed displayed value from total walking time to total walking distance.
Also moved formatting rules for distance and time into separate methods.

--- a/views/templates.haml
+++ b/views/templates.haml
@@ -18,7 +18,7 @@
             %td
               {{firstLineTime legs.[0]}}
             %td
-              {{totalWalkingTime}}
+              {{totalWalkingDistance}}
             %td
               {{endLineTime legs.[0]}}
       -# List each part of the route
