style second row smaller

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,16 +2,25 @@
 	width: 100%;
 }
 
-.route td:first-child {
+.route td:first-child { /* column 1 */
 	text-align: left;
 }
 
-.route td:first-child + td {
+.route td:first-child + td { /* column 2 */
 	text-align: center;
 }
 
-.route td:first-child + td + td {
+.route td:first-child + td + td { /* column 3 */
 	text-align: right;
+}
+
+.route tr:first-child { /* row 1 */
+
+}
+
+.route tr:first-child + tr { /* row 2 */
+	color: #AAA;
+	font-size: 80%;
 }
 
 .leg {
