--- a/views/options.haml
+++ b/views/options.haml
@@ -1,7 +1,7 @@
 %header(data-role = "header" data-position="inline")
-	%a(href = "#home" data-icon="delete" data-rel="back") Cancel
+	%a(href = "#home" data-icon="delete" data-rel="back" id="cancelOpt") Cancel
 	%h1 Options
-	%a(href = "#" data-icon="check" data-theme="b" id="saveOpt") Save
+	%a(href = "#home" data-icon="check" data-theme="b" id="saveOpt") Save
 	
 %section(data-role="content")
 	%form
