--- a/views/layout.haml
+++ b/views/layout.haml
@@ -11,9 +11,11 @@
 		%script(type="text/javascript" src="jquery/jquery.mobile-1.0.1.min.js")
 		%script(type="text/javascript" src="http://dev.jtsage.com/cdn/simpledialog/latest/jquery.mobile.simpledialog2.min.js")
 		%script(type="text/javascript" src="js/handlebars-1.0.0.beta.6.js")
+		%script{:src => "http://maps.google.com/maps/api/js?sensor=true", :type => "text/javascript"}
 		%title
 			ReittiSpeedDial
-
+			
+		%script(type="text/javascript" src="js/gps.js")
 		%script(type="text/javascript" src="js/reittiopas.js")
 	%body
 		= haml :templates
