fixed calculation of line departure and arrival times
the "first line departure" and "last line arrival" times were calculated wrong, now it is fixed

also, now it actually verifies that the line in question is not a 'walk' leg

--- a/views/templates.haml
+++ b/views/templates.haml
@@ -16,11 +16,11 @@
               {{arrivalTime}}
           %tr
             %td
-              {{firstLineTime legs.[0]}}
+              {{firstLineDeparture}}
             %td
               {{totalWalkingDistance}}
             %td
-              {{endLineTime legs.[0]}}
+              {{lastLineArrival}}
           %tr
             %td
             %td
