--- a/views/header.haml
+++ b/views/header.haml
@@ -1,4 +1,4 @@
 %header(data-role="header")
 	%h1 ReittiSuperDial
 	%a#optButton(href="#options" data-icon="gear" class="ui-btn-right" data-transition="slidedown") Options
-	
+%section.address
