more details in route listings
there is a rudimentary implementation for getting the line number, as well as some other additions to the route listings

--- a/views/templates.haml
+++ b/views/templates.haml
@@ -26,13 +26,15 @@
             %td
               {{#legs}}
               %figure{:class => 'icon {{iconClass}}'}
+                %figcaption {{lineNumber}}
               {{/legs}}
             %td
       -# List each part of the route
       {{#legs}}
       .leg
         %figure{:class => 'icon {{iconClass}}'}
-        {{length}} - {{duration}}
+          %figcaption {{lineNumber}}
+        %h5 {{departureTime this}} - {{length}} - {{duration}}
       {{/legs}}
     {{/with}}
     {{/each}}
