typo in image name

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -55,7 +55,7 @@ section[data-role=content] {
 }
 
 .icon.walk {
-	background-image: url("../img/25px/walk2.png");
+	background-image: url("../img/25px/walk.png");
 }
 
 .icon.tram {
