try to improve listing visibility
* a little less width to the route info table
* move the plus icon to the left (doesn't seem to have an effect)

--- a/views/templates.haml
+++ b/views/templates.haml
@@ -4,7 +4,7 @@
     -# Go through the array of routes and select the single item in each
     {{#each []}}
     {{#with [0]}}
-    .route{:data => {:role => 'collapsible', :collapsed => 'true'}}
+    .route{:data => {:role => 'collapsible', :collapsed => 'true', :iconpos => 'right'}}
       %h3
         %table
           %tr
