--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,22 +1,21 @@
 !!! 5
 %html
 	%head
-		%meta(charset="utf-8")
-		%meta(content="IE=edge,chrome=1" http-equiv="X-UA-Compatible")
-		%meta(name="viewport" content="width=device-width, user-scalable=0, initial-scale=1.0, maximum-scale=1.0;")
-		%link(rel="stylesheet" href="jquery/jquery.mobile-1.0.1.min.css")
-		%link(rel="stylesheet" type="text/css" href="http://dev.jtsage.com/cdn/simpledialog/latest/jquery.mobile.simpledialog.min.css")
-		%link(rel="stylesheet" href="css/styles.css")
-		%script(type="text/javascript" src="jquery/jquery-1.7.1.min.js")
-		%script(type="text/javascript" src="jquery/jquery.mobile-1.0.1.min.js")
-		%script(type="text/javascript" src="http://dev.jtsage.com/cdn/simpledialog/latest/jquery.mobile.simpledialog2.min.js")
-		%script(type="text/javascript" src="js/handlebars-1.0.0.beta.6.js")
-		%script{:src => "http://maps.google.com/maps/api/js?sensor=true", :type => "text/javascript"}
+		%meta{:charset => 'utf-8',}
+		%meta{:content => 'IE=edge,chrome=1', :'http-equiv' => 'X-UA-Compatible'}
+		%meta{:name => 'viewport', :content => 'width=device-width, user-scalable=0, initial-scale=1.0, maximum-scale=1.0;'}
+		%link{:rel => 'stylesheet', :href => 'jquery/jquery.mobile-1.1.0.min.css'}
+		%link{:rel => 'stylesheet', :type => 'text/css', :href => 'http://dev.jtsage.com/cdn/simpledialog/latest/jquery.mobile.simpledialog.min.css',}
+		%link{:rel => 'stylesheet', :href => 'css/styles.css'}
+		%script{:type => 'text/javascript', :src => 'jquery/jquery-1.7.1.min.js'}
+		%script{:type => 'text/javascript', :src => 'jquery/jquery.mobile-1.1.0.min.js'}
+		%script{:type => 'text/javascript', :src => 'http://dev.jtsage.com/cdn/simpledialog/latest/jquery.mobile.simpledialog2.min.js'}
+		%script{:type => 'text/javascript', :src => 'js/handlebars-1.0.0.beta.6.js'}
 		%title
-			ReittiSpeedDial
+			ReittiSuperDial
 			
-		%script(type="text/javascript" src="js/gps.js")
-		%script(type="text/javascript" src="js/reittiopas.js")
+		%script{:type => 'text/javascript', :src => 'js/gps.js'}
+		%script{:type => 'text/javascript', :src => 'js/reittiopas.js'}
 	%body
 		= haml :templates
 		= yield
