--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,5 +1,5 @@
 !!! 5
-%html
+%html{:manifest => 'manifest.appcache'}
 	%head
 		%meta{:charset => 'utf-8',}
 		%meta{:content => 'IE=edge,chrome=1', :'http-equiv' => 'X-UA-Compatible'}
