fixed glitch which saved to wrong place

--- a/views/footer.haml
+++ b/views/footer.haml
@@ -2,7 +2,7 @@
 	%nav(data-role="navbar")
 		%ul
 			%li
-				%a(href="/" data-ajax="false" data-transition="slide" data-direction="reverse") Home
+				%a(href="#home" data-transition="slide") Home
 			%li
 				%a(href="#work" data-transition="slide") Work
 			%li
