last minute bugfix :)

--- a/views/footer.haml
+++ b/views/footer.haml
@@ -2,8 +2,8 @@
 	%nav(data-role="navbar")
 		%ul
 			%li
-				%a(href="#home" data-transition="slide") Home
+				%a#btn_home(href="#home" data-transition="slide") Home
 			%li
-				%a(href="#work" data-transition="slide") Work
+				%a#btn_work(href="#work" data-transition="slide") Work
 			%li
-				%a(href="#city" data-transition="slide") City
+				%a#btn_city(href="#city" data-transition="slide") City
